ヘッダーとメニュー作成

--- a/index.html
+++ b/index.html
@@ -2,11 +2,29 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="res/css/style.css">
-        <script type="text/javascript" src="res/js/app.js"></script>
-        <title>TITLE HERE</title>
+        <!-- <script type="text/javascript" src="res/js/app.js"></script> 今回はJavaScriptを利用しない-->
+        <title>Welcome to TOYOTA</title>
     </head>
     <body>
-        <h1>Hello, world.</h1>
+        <header>
+            <a href="#" class="logo">
+                <img src="res/imgs/title.png" alt="logo">
+            </a>
+            <input type="checkbox" class="side-menu" id="side-menu">
+            <label class="hamb" for="side-menu">
+                <span class="hamb-line"></span>
+            </label>
+            <nav class="nav">
+                <ul class="menu">
+                    <li><a href="#">豊田市について</a></li>
+                    <li><a href="#">市長挨拶</a></li>
+                    <li><a href="#">取り組み</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+        </main>
     </body>
 </html>
