--- a/index.html
+++ b/index.html
@@ -8,23 +8,27 @@
         <title>Welcome to TOYOTA</title>
     </head>
     <body>
-        <header>
-            <a href="#" class="logo">
-                <img src="res/imgs/title.png" alt="logo">
-            </a>
-            <input type="checkbox" class="side-menu" id="side-menu">
-            <label class="hamb" for="side-menu">
-                <span class="hamb-line"></span>
-            </label>
-            <nav class="nav">
-                <ul class="menu">
-                    <li><a href="#">豊田市について</a></li>
-                    <li><a href="#">市長挨拶</a></li>
-                    <li><a href="#">取り組み</a></li>
-                </ul>
-            </nav>
+        <header class="full">
+            <div class="title">
+                <div class="title1">ようこそ</div>
+                <div class="title2">自然豊かな</div>
+                <div class="title3">豊田市へ</div>
+            </div>
+            <div class="slider">
+                <div class="slide"></div>
+                <div class="slide"></div>
+                <div class="slide"></div>
+                <div class="slide"></div>
+                <div class="slide"></div>
+            </div>
         </header>
         <main>
+            <article>
+                <div>自然</div>
+                <div>
+                    <div>香嵐渓</div>
+                </div>
+            </article>
         </main>
     </body>
 </html>
