--- a/index.html
+++ b/index.html
@@ -24,9 +24,43 @@
         </header>
         <main>
             <article>
-                <div>自然</div>
+                <h2>香嵐渓</h2>
                 <div>
-                    <div>香嵐渓</div>
+                    <div>矢作川支流巴川がつくる渓谷、香嵐渓（こうらんけい）は、紅葉やカタクリの花などが有名。<br>
+                        香積寺11世の三栄和尚が、江戸時代の寛永11年に植樹したことがはじまりとされ、現在では全国有数の紅葉の名所として約4000本のもみじが彩りを見せます。足助川をはさんで、かつての宿場を思わせる古い町並みの散策もできます。</div>
+                    <div class="img-nature nature1">
+                        <div class="layer-black"></div>
+                    </div>
+                </div>
+            </article>
+            <article>
+                <h2>三河湖</h2>
+                <div>
+                    <div>三河地方をうるおす愛知県下最大の灌漑用人造湖で、周囲は変化に富んだ自然がいっぱい。<br>
+                        周囲には下山名物の五平餅やどて煮などが楽しめる休憩所、四季の彩りを味わえる散策路、バンガロー村やキャンプ場、レンタルボートなどがあり、ルアーフィッシングも楽しめ、美しい大自然を満喫できます。</div>
+                    <div class="img-nature nature2">
+                        <div class="layer-black"></div>
+                    </div>
+                </div>
+            </article>
+            <article>
+                <h2>夢かけ風鈴</h2>
+                <div>
+                    <div>平成15年から始まったイベントです。この時期になると、小渡町では、川のせせらぎに加えて、涼しげな風鈴の音色が町いっぱいに響き渡ります。<br>
+                        風鈴寺（増福寺）では、風鈴の短冊に願い事を書く「風鈴奉納」や「写経体験」「坐禅体験」が行われるほか、小渡商店街では、「風鈴絵付け」や「夏休み工作教室」などのイベントも開催され多くの人でにぎわいます。</div>
+                    <div class="img-nature nature3">
+                        <div class="layer-black"></div>
+                    </div>
+                </div>
+            </article>
+            <article>
+                <h2>茶臼山高原</h2>
+                <div>
+                    <div>愛知県と長野県の境に位置し、標高1415メートルを誇る県下の最高峰、茶臼山。山を中心に広がる高原は、牧歌的な情緒に満ちた美しい白樺林、湖、草原など、リフレッシュ効果抜群。<br>
+                        標高1358メートル、萩太郎山の頂上付近に広がる「芝桜の丘」では、5月上旬から6月中旬にかけて、2万2千平方メートルの広大な敷地に40万株の芝桜が咲き誇ります。ピンク、白、淡青、青紫など、色も形も違う6種類の芝桜が織りなす色鮮やかな絨毯は圧巻。</div>
+                    <div class="img-nature nature4">
+                        <div class="layer-black"></div>
+                    </div>
                 </div>
             </article>
         </main>
