--- a/index.html
+++ b/index.html
@@ -64,5 +64,21 @@
                 </div>
             </article>
         </main>
+        <footer>
+            <div class="icon-area">
+                <div class="icon">
+                    <img src="res/imgs/instagram_2111463.png" width="40" height="40" style="object-fit: contain;">
+                </div>
+                <div class="icon">
+                    <img src="res/imgs/facebook_174848.png" width="40" height="40" style="object-fit: contain;">
+                </div>
+                <div class="icon">
+                    <img src="res/imgs/twitter_4494477.png" width="40" height="40" style="object-fit: contain;">
+                </div>
+            </div>
+            <div class="copy-right">
+                <div>&copy; 2023 TOYOTA</div>
+            </div>
+        </footer>
     </body>
 </html>
